demo2/assets/css/demo-all.css
:root {
	--color-link: #69f;
	--color-link-active: #9bf;
	--bgcolor-panel-1: rgba(0,0,0,0.2);
	--bgcolor-panel-2: rgba(0,0,0,0.3);
	--bgcolor-modal-1: #012944;
	--bgcolor-modal-2: #024f85;
}
html {
	min-height: 100%;			/* 背景图片撑开，否则窄屏下方有白边 */
	padding: 0px!important;		/* PerfectScrollbar用，直接替换html的滚动条 */
}
body {
	min-height: 100%;
    background: url(../img/bg1.jpg) no-repeat;
    background-size: cover;
	background-position: 90% 20%;
	color: #eee;
}
a[disabled], a.disabled {
	text-decoration: none;
	color: #aaa;
}
span.form-control-feedback {
	line-height: 34px;
	right: -4px;
}
.form-control {
	background: transparent;
}
a {
	color: var(--color-link)!important;
}
a:focus, a:hover {
    color: var(--color-link-active)!important;
}

.thin-body {
	width: 1260px;
	margin: 0 auto;
}

.masthead {
    overflow: hidden;
    height: 300px;
	min-width: 1260px;
    position: relative;
    color: #fff;
    text-align: center;
    text-shadow: 0 1px 50px rgba(0,0,0,.9), 0 0 30px rgba(0,0,0,.5);
    background: url(../img/masthead2.png) no-repeat right top;
    background-size: cover;
    padding-top: 40px;
}
.masthead-logo {
	float: left;
	margin-left: 300px;
	width: 150px;
	height: 167px;
	background: url(../img/icon3.png) no-repeat;
	background-size: 100%;
}
.masthead-name {
	float: left;
	margin-left: 40px;
	margin-top: 40px;
}
.masthead-name-main {
	font-size: 40px;
	text-shadow: 0 0 15px rgba(0, 0, 0, 1);
	padding-bottom: 0px;
	text-align: left;
	padding-left: 10px;
}
.masthead-name-sub {
	text-shadow: 0 0 12px rgba(0, 0, 0, 1);
	font-size: 14px;
}
@media screen and (max-height: 768px) {
	.masthead {
		height: 200px;
	}
	.masthead-logo {
		margin-left: 320px;
		width: 100px;
		height: 111px;
	}
	.masthead-name {
		margin-left: 20px;
		margin-top: 5px;
	}
}

.breadcrumb {
    background-color: transparent;
	margin-bottom: 0;
	text-shadow: 0 2px 1px rgba(0, 0, 0, 0.5);
	color: #ddd;
}
.breadcrumb>li+li:before {
	content: "> ";
}

/*.weak {
	color: #999;
}
.paint strong {
	color: orange;
}
.judge.fa {
	display: block;
}
.judge.fa.right:after {
	content: "    \f00c";
	color: green;
}
.judge.fa.wrong:after {
	content: "    \f00d";
	color: red;
}*/

.hover:hover {
	opacity: 0.8;
}


/*.extra-link {
	position: absolute;
	top: 0;
	right: 100px;
	width: 100px;
	height: 24px;
	background: rgba(0, 0, 0, 0.2);
}
.extra-link a {
	color: #fff;
}*/

.mastbody {
	/*min-height: 544px;*/
	background: transparent;
	padding-bottom: 15px;
	margin-left: 0;
	margin-right: 0;
	width: 100%;
	display: inline-block;
}

.panel-white {
	/*border-color: #999;*/
}
.panel-white .panel-heading {
	/*border-bottom-color: #ddd;*/
    background-color: var(--bgcolor-panel-1);
    color: #fff;
}
.panel-white .input-group-addon {
    background-color: var(--bgcolor-panel-2);
    color: #ddd;
    border-color: #ccc;
}
.panel-white .form-control {
	background-color: transparent;
    color: #fff;
    border-color: #ccc;
}
.panel-white .form-control:active,
.panel-white .form-control:focus {
    border-color: #66afe9;
    color: #86cff9;
    text-shadow: 0 0 8px rgba(102,175,233, 0.9);
    -webkit-box-shadow: inset 0 0 8px rgba(102,175,233, 0.9), 0 0 8px rgba(102,175,233, 0.9);
    box-shadow: inset 0 0 8px rgba(102,175,233, 0.9), 0 0 8px rgba(102,175,233, 0.9);
}
.panel-title .pull-right {
	margin-left: 15px;
	font-size: 14px;
}

.footer {
    background-color: var(--bgcolor-panel-2);
    color: #fff;
}

/*.panel-white i {
	color: #ddd;
}*/
.panel {
	overflow: hidden;
    margin-bottom: 20px;
    background-color: var(--bgcolor-panel-2);
    /* border: 1px solid transparent; */
    border-width: 0px;
    border-radius: 10px;
    /* -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05); */
    /* box-shadow: 0 1px 1px rgba(0,0,0,.05); */
    color: #fff;
    /*box-shadow: inset 0 0 15px 5px rgba(0,0,0,0.5);*/
}
.panel-body {
	padding-top: 0;
}

.left-area {
	width: 400px;
	float: left;
	margin-left: 10px;
}

.dropdown-preview > .dropdown-menu {
    display: block;
    position: static;
    margin-bottom: 5px;
    float: initial;
    border: none;
    box-shadow: none;
    background: transparent;
}
.dropdown-menu>li>a {
	color: var(--color-link);
}

/*.middle-area {
	width: 250px;
	float: left;
	margin-left: 15px;
}*/
/*.right-area {
	width: calc(100% - 345px);
	float: left;
	margin-left: 15px;
}*/
.right-area {
	width: 820px;
	float: left;
	margin-left: 20px;
}
/*.middle-area + .right-area {
	width: calc(100% - 610px);
}*/
.panel-static-height {
	height: 300px;
}

ul.no-style {
	list-style-type: none;
	-webkit-padding-start: 0px;
}
.fix-text-330 {
	display: block;
	white-space: nowrap;
	overflow-x: hidden;
	text-overflow: ellipsis;
	width: 330px;
}
.fix-text a,
.fix-text span {
	white-space: nowrap;
	overflow-x: hidden;
	text-overflow: ellipsis;
	display: block;
}
.fix-text-660 a,
.fix-text-660 span {
	width: 660px;
}
.fix-text-350 a,
.fix-text-350 span {
	width: 350px;
}
.fix-text-260 a,
.fix-text-260 span {
	width: 260px;
}
.fix-text-200 a,
.fix-text-200 span {
	width: 200px;
}


.avatar {
	width: 70px;
}
.police-name, .police-name {
	line-height: 42px;
}
.police-name:before {
	content: "姓名：";
}
.police-id:before {
	content: "警号：";
}


.func-item {
	border: 1px dotted #ddd;
	border-radius: 5px;
	height: 110px;
	width: 110px;
	float: left;
	margin-left: 18px;
	margin-bottom: 18px;
}
.func-item:hover {
	background: rgba(0,0,0, 0.2);
}
.func-item:active {
	background: #ddd;
}
.func-item.func-item-2x {
	width: 180px;
}
.func-item.func-item-2x:hover {
	background: rgba(0,0,0, 0);
}
.func-item .info {
	margin-top: 20px;
	line-height: 22px;
}
.no-border {
	border-color: transparent;
}
.func-item .icon {
	margin-top: 18px;
	width: 100%;
	text-align: center;
}
.func-item .icon img {
	width: 27px;
}
.func-item .desciption{
	margin-top: 10px;
	height: 27px;
	text-align: center;
}

.ps {
	padding: 30px;
}
.ps p {
	text-indent: 1em;
}

.classes {
	padding: 0px 25px;
    display: inline-block;
    text-align: center;
    width: 1000px;
}
.class-item {
	border: 1px solid #999;
	border-radius: 5px;
	height: 200px;
	width: 170px;
	float: left;
	margin-left: 10px;
	margin-right: 10px;
	margin-bottom: 20px;
	background: #fff;
    display: inline-block;
}
.class-item .icon {
	position: relative;
	top: 30px;
	left: auto;
	right: auto;
	font-size: 5em;
}
.class-item .title {
	position: relative;
	top: 36px;
	left: auto;
	right: auto;
}
.class-item button {
	position: relative;
	top: 36px;
	left: auto;
	right: auto;

}

.wrong-list table tbody tr :first-child, .wrong-list table tbody tr :last-child {
	text-align: center;
}

.modal-content {
    background-color: var(--bgcolor-modal-1);
}
.modal-dialog {
	width: 700px;
	height: 300px;
	position: fixed;
	top: calc(50% - 150px);
	left: calc(50% - 350px);
}
.modal-footer {
	text-align: center;
	border-top: 1px solid var(--bgcolor-modal-2);
}
.btn-success,
.btn-default {
    background-color: var(--bgcolor-modal-1);
    border-color: var(--bgcolor-modal-2);
    color: #ddd;
}

.exam-header-item + .exam-header-item {
	border-left: 1px solid #ddd;
}
.exam-area {
	padding: 0 40px;
}

.q-select-items {
	padding-left: 20px;
}
.q-select-answer {
	padding-left: 40px;
}

.icon-description {
	margin-top: 3px;
}

